[project]
name = "yt-dlpx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ddgs>=9.6.0",
    "prompt-toolkit>=3.0.52",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "tavily-python>=0.7.12",
    "textual>=6.2.1",
    "textual-dev>=1.7.0",
    "yt-dlp>=2025.9.26",
]
